[FIX] login page: not responsive + swap widget after request accepted

--- a/srcs/django/ft_transcendence/static/css/main.css
+++ b/srcs/django/ft_transcendence/static/css/main.css
@@ -339,6 +339,16 @@ header {
     border: 1px solid var(--accent2);
 }
 
+@media (max-width: 680px) {
+    .login_box {
+        grid-template-columns: 100%;
+    }
+    .login_box > div:first-child {
+        width: 100%;
+        height: 200px;
+    }
+}
+
 .login_box ul {
     margin-bottom: 8px;
 }
@@ -359,6 +369,7 @@ header {
 }
 
 .login_box > div:first-child {
+    width: 100%;
     background-image: url('../../../static/images/spacepong.png');
     background-position: center;
     background-repeat: no-repeat;
